refactor: Remove artefatos _smoke defasados da aplicação Organização
